--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9' // for our HTTP requests later
     compile 'com.google.code.gson:gson:2.2.4' // for parsing JSON
     compile 'com.squareup.picasso:picasso:2.1.1' // for image rendering
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
